Refactor kext update workflow for macOS
Updated the kext update workflow to run on macOS and modified the installation steps for dependencies. Enhanced reporting for kext updates and adjusted commit and pull request creation steps.

--- a/.github/workflows/kext.yml
+++ b/.github/workflows/kext.yml
@@ -3,7 +3,7 @@ name: Update EFI Kexts
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 3 * * 0" # weekly, Sunday 03:00 UTC
+    - cron: "0 3 * * 0" # weekly
 
 permissions:
   contents: write
@@ -11,20 +11,31 @@ permissions:
 
 jobs:
   update-kexts:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y jq unzip
+      - name: Install tools
+        run: |
+          brew update
+          brew install jq
+
+      - name: Prepare report
+        run: |
+          echo "# EFI Kext Update Report" > report.md
+          echo "" >> report.md
+          echo "| Kext | Source | Result | Notes |" >> report.md
+          echo "|------|--------|--------|-------|" >> report.md
 
       - name: Update kexts
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -e
+          set +e
 
           EFI_DIR="EFI"
           MAP_FILE=".github/kext-repos.json"
@@ -32,57 +43,105 @@ jobs:
 
           for KEXT_PATH in $(find "$EFI_DIR" -name "*.kext" -type d); do
             KEXT_NAME=$(basename "$KEXT_PATH")
-
             REPO=$(jq -r --arg k "$KEXT_NAME" '.[$k] // empty' "$MAP_FILE")
-            if [ -z "$REPO" ]; then
-              echo "No repo mapping for $KEXT_NAME, skipping"
+
+            if [ -z "$REPO" ] || [[ "$REPO" == unknown/* ]]; then
+              echo "| $KEXT_NAME | — | Skipped | No repo mapping |" >> report.md
               continue
             fi
 
-            echo "Checking $KEXT_NAME from $REPO"
-
-            API_URL="https://api.github.com/repos/$REPO/releases/latest"
-            DOWNLOAD_URL=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
-              "$API_URL" | jq -r '.assets[] | select(.name | endswith(".zip")) | .browser_download_url' | head -n1)
-
-            if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" = "null" ]; then
-              echo "No release zip found for $KEXT_NAME"
-              continue
-            fi
-
+            echo "Processing $KEXT_NAME ($REPO)"
             TMP_DIR=$(mktemp -d)
-            curl -L "$DOWNLOAD_URL" -o "$TMP_DIR/release.zip"
-            unzip -q "$TMP_DIR/release.zip" -d "$TMP_DIR"
+            RESULT=""
+            SOURCE=""
+            NOTES=""
 
-            NEW_KEXT=$(find "$TMP_DIR" -name "$KEXT_NAME" -type d | head -n1)
-            if [ -z "$NEW_KEXT" ]; then
-              echo "Updated $KEXT_NAME not found in archive"
-              continue
+            ### Attempt build from source
+            git clone --depth=1 "https://github.com/$REPO.git" "$TMP_DIR/src"
+            if [ $? -eq 0 ]; then
+              cd "$TMP_DIR/src"
+
+              if ls *.xcodeproj >/dev/null 2>&1; then
+                xcodebuild -project *.xcodeproj \
+                  -configuration Release \
+                  -scheme $(xcodebuild -list | grep -A1 "Schemes:" | tail -n1 | xargs) \
+                  build \
+                  CODE_SIGNING_ALLOWED=NO \
+                  BUILD_DIR="$TMP_DIR/build" >/dev/null 2>&1
+
+                BUILT_KEXT=$(find "$TMP_DIR/build" -name "$KEXT_NAME" -type d | head -n1)
+
+                if [ -n "$BUILT_KEXT" ]; then
+                  rm -rf "$KEXT_PATH"
+                  cp -R "$BUILT_KEXT" "$KEXT_PATH"
+                  UPDATED=true
+                  RESULT="Updated"
+                  SOURCE="Built"
+                else
+                  NOTES="Build succeeded but kext not found"
+                fi
+              else
+                NOTES="No Xcode project"
+              fi
+            else
+              NOTES="Clone failed"
             fi
 
-            rm -rf "$KEXT_PATH"
-            cp -R "$NEW_KEXT" "$KEXT_PATH"
-            UPDATED=true
+            cd "$GITHUB_WORKSPACE"
+
+            ### Fallback to GitHub release
+            if [ "$RESULT" != "Updated" ]; then
+              API_URL="https://api.github.com/repos/$REPO/releases/latest"
+              ZIP_URL=$(curl -s -H "Authorization: Bearer $GH_TOKEN" "$API_URL" \
+                | jq -r '.assets[] | select(.name | endswith(".zip")) | .browser_download_url' | head -n1)
+
+              if [ -n "$ZIP_URL" ] && [ "$ZIP_URL" != "null" ]; then
+                curl -L "$ZIP_URL" -o "$TMP_DIR/release.zip"
+                unzip -q "$TMP_DIR/release.zip" -d "$TMP_DIR"
+                REL_KEXT=$(find "$TMP_DIR" -name "$KEXT_NAME" -type d | head -n1)
+
+                if [ -n "$REL_KEXT" ]; then
+                  rm -rf "$KEXT_PATH"
+                  cp -R "$REL_KEXT" "$KEXT_PATH"
+                  UPDATED=true
+                  RESULT="Updated"
+                  SOURCE="Release"
+                  NOTES="${NOTES:-Fallback download}"
+                else
+                  RESULT="Failed"
+                  NOTES="Kext not in release"
+                fi
+              else
+                RESULT="Failed"
+                NOTES="No release zip"
+              fi
+            fi
+
+            echo "| $KEXT_NAME | $SOURCE | $RESULT | $NOTES |" >> report.md
           done
 
           if [ "$UPDATED" = false ]; then
-            echo "No kexts updated"
-            exit 0
+            echo "" >> report.md
+            echo "**No kexts were updated.**" >> report.md
           fi
 
       - name: Commit changes
-        if: success()
         run: |
+          git checkout -b kext-updates
+          git add EFI report.md
           git config user.name "Artisan-EFI-Bot"
           git config user.email "efi@artisanbot.it"
-          git checkout -b kext-updates
-          git add EFI
-          git commit -m "Update EFI kexts to latest releases"
+
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
+
+          git commit -m "Update EFI kexts (build + release fallback)"
 
       - name: Create Pull Request
-        if: success()
         uses: peter-evans/create-pull-request@v6
         with:
           title: "Update EFI kexts"
-          body: "This PR updates EFI kexts to their latest GitHub releases."
+          body-path: report.md
           branch: kext-updates
